2003-11-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-util.el (w3m-last-visited-buffer): Abolished.
	(w3m-popup-buffer): Do not reset the above variable.

	* w3m.el (w3m-close-window): Do not set the above variable.
	(w3m): Do not refer the above variable.

2003-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-retrieve-and-render): Use `w3m-message' instead of
	`message'; don't let it be controlled by `w3m-verbose'.
	(w3m-alive-p): Don't sort the return value of `list-buffers' so
	that it returns the last visited emacs-w3m buffer as much as
	possible; don't inline the `w3m-list-buffers' function.

2003-11-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-verbose): Change its default value to nil.
	(w3m-message): When `w3m-verbose' is nil, display messages without
	logging.
	(w3m-make-help-echo, w3m-toggle-inline-image, w3m-zoom-in-image,
	w3m-zoom-out-image, w3m-view-this-url, w3m-submit-form,
	w3m-view-image, w3m-save-image, w3m-view-url-with-external-browser,
	w3m-download-this-url, w3m-print-this-url, w3m-edit-current-url,
	w3m-edit-this-url, w3m-quit, w3m-goto-ftp-url, w3m-select-buffer,
	w3m-select-buffer-show-this-line,
	w3m-select-buffer-show-this-line-and-switch): Call `w3m-message'
	instead of `w3m-display-message'.

	* w3m-util.el (w3m-display-message): Removed.
	(w3m-display-message-enable-logging): Abolished.

2003-11-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-message): Silent when the cursor is in minibuffer.

	* w3m-util.el (w3m-display-message): Ditto.

2003-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-html-string-regexp): Fix my fault; enclose it with
	`eval-and-compile' which is needed for compiling since it is used
	in a macro.

2003-11-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-real-url): New function.
	(shimbun-content-type, shimbun-url-exists-p): Removed.

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers): Call